# create_vtl_corpus

./: .gitignore  .readthedocs.yml  .zenodo.json  CITATION.cff  LICENSE  README.rst  analysis.R  create_corpus.py  environment.yml  example_sampa.txt  fix_ges.py  generate_gestural_score.py  ges2wav.py  pitch_contour.py  pyproject.toml  run_targetoptimizer.py  sampa2ges.py  seg2ges.py  synthesize.py  tg2sampa.py  tgwav2utt.py  wavsplitter.py
create_vtl_corpus/: CreateVocaltractLab.py  corpus_utils.py  create_corpus copy.py  create_corpus.py  createvocaltractlab.py  environment.yml  extractpitch.praat  generate_data.py  generate_gestural_score.py  ges2wav.py  manually_add_mels.py  phone_attributes.txt  pitch_contour.py  sampa2ges.py  sampa2seg.py  seg2ges.py  textgrid.py  tgwav2utt.py  to_vocaltract_lab.py
create_vtl_corpus/resources/: phonemes.csv  sampa_ipa_dict.pkl
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  glossary.rst  index.rst  installation.rst  issues.rst  phonemes.csv  pipeline.rst  usage.rst
docs/tests/: no_phoneme.pkl  no_phoneme_sr.pkl  test_mfa_to_sampa_dict.py
docs/tests/clips/temp_output/: all_phones.ges  all_phones.seg
tests/: test_mfa_to_sampa_dict.py
tests/clips/temp_output/: all_phones.ges  all_phones.seg
