[tool.poetry]
name = "create-vtl-corpus"
version = "0.8"
description = "Python scripts to create and synthesize a speech corpus with VocalTractLab."
authors = ["Tino Sering"]
license = "GNU General License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.18,<2.1"
tqdm = "^4.66.5"
pandas = "^2.2.3"
fasttext = "^0.9.3"
paule = "^0.4.5"
joblib = "^1.4.2"
praatio = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
