[tool.poetry]
name = "create-vtl-corpus"
version = "3.0.2"
description = "Python scripts to create and synthesize a speech corpus with and for VocalTractLab."
authors = ["Konstanin Sering", "Valentin Schmidt", "Niels Stehwien", "Yingming Gao"]
license = "GNU General Public License Version 3"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26.4"
tqdm = ">=4.66.5"
pandas = ">=2.2.3"
fasttext = ">=0.9.3"
paule = ">=0.4.5"
joblib = ">=1.4.2"
praatio = ">=6.2.0"
librosa = ">=0.10.2.post1"
resampy = ">=0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

